feat: remove maxAttempts from strategic dependency resolution attempt display

--- a/src/templates/strategic-prompt.hbs
+++ b/src/templates/strategic-prompt.hbs
@@ -1,4 +1,4 @@
-STRATEGIC DEPENDENCY RESOLUTION - ATTEMPT {{attempt}}/{{maxAttempts}}
+STRATEGIC DEPENDENCY RESOLUTION - ATTEMPT {{attempt}}
 
 TARGET UPGRADES USER WANT TO DO: {{targetPackages}}
 
